<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_carpwesar_logo_small" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMEditText
        android:id="@+id/et_email"
        style="@style/MMEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorAccent"
        android:hint="@string/msg_enter_email"
        android:inputType="textEmailAddress" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMEditText
        android:id="@+id/et_password"
        style="@style/MMEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorAccent"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableRight="@drawable/ic_visibility_24dp"
        android:hint="@string/msg_enter_password"
        android:inputType="textPassword" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/lbl_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/forgot_password"
        android:textColor="@color/accent" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/lbl_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/accent_dark" />

</LinearLayout>
