<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:src="@drawable/ic_carpwesar_logo_small" />

    <ImageView
        android:id="@+id/ic_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_person_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_username"
        android:text="@string/msg_enter_username" />

    <ImageView
        android:id="@+id/ic_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_username"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_password_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_username"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_password"
        android:text="@string/msg_enter_login_password" />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_password"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_phone_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_password"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_phone"
        android:text="@string/msg_enter_phone" />


    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_phone"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_email_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_phone"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_email"
        android:text="@string/msg_enter_email" />

    <ImageView
        android:id="@+id/ic_sellertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_email"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_sellertype_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_sellertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_email"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_sellertype"
        android:text="Seller Type" />

    <ImageView
        android:id="@+id/ic_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_sellertype"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_calender_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_sellertype"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ic_calender"
        android:text="DOB" />

    <ImageView
        android:id="@+id/ic_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_of_birth"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_gender_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_of_birth"
        android:layout_toRightOf="@id/ic_gender"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="Gender" />

    <ImageView
        android:id="@+id/ic_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_gender"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_notifications_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_gender"
        android:layout_toRightOf="@id/ic_notifications"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            android:text="@string/notify_me" />

        <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
            android:id="@+id/tv_notify_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notify Me" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ic_user_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_notifications"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_user_agree_24dp" />

    <xyz.phyoekhant.padc2_week1_login_register.components.MMTextView
        android:id="@+id/tv_user_agreements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_notifications"
        android:layout_toRightOf="@id/ic_user_agree"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="User Agreements" />

</RelativeLayout>
